--- a/SeguridadWeb.UI.AppWebAspCore/Views/Shared/_Layout.cshtml
+++ b/SeguridadWeb.UI.AppWebAspCore/Views/Shared/_Layout.cshtml
@@ -30,6 +30,12 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Usuario</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Categoria" asp-action="Index">Categoria</a>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Producto" asp-action="Index">Producto</a>
+                            </li>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="CambiarPassword">Cambiar password</a>
                             </li>
                             <li class="nav-item">
@@ -49,7 +55,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Seguridad Web
+            &copy; 2024 - Seguridad Web MABA
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
